# HPC_STUDY

./: EXAM1.md
CUDACodes/: readme.md
CUDACodes/Lec6_codes/: Dockerfile  double.cu  double.exp  double.lib  julia_cpu.cu  readme.md  vec_add.exp  vec_add.lib  vector_addition.cu
CUDACodes/Lec8_codes/ex_tex_obj/: Makefile  ex_tex_obj  ex_tex_obj.cu
CUDACodes/Lec8_codes/heat/: Makefile  heat_1d  heat_2d
CUDACodes/Lec8_codes/ray/: Makefile  ray  ray.cu  ray_noconst  ray_noconst.cu
CUDACodes/lec7_codes/: Makefile  histo_template  histo_template.cu  matrix_multiplication  matrix_multiplication.cu  matrix_transpose.cu  run.sh
Codes/mpi_lab1/mpi_lab1/: mpi_trapezoid_1.c
MPICodes/: CMakeLists.txt  Makefile  lecture11.c  lecture12.c  mpi_pi_mc.c  mpi_ring_v2.c  mpi_ring_v4.c  run.sh  sieve_mpi.c  test  test_main_11
